# guardian-ai-env

./: .dockerignore  .env.example  .gitignore  Blog.md  CONTRIBUTING.md  Dockerfile  README.md  __init__.py  blog_post.md  client.py  demo_app.py  evaluate_model.py  guardian_ai_grpo.py  inference.py  models.py  openenv.yaml  pyproject.toml
outputs/: README.md  training_log.jsonl
server/: __init__.py  app.py  graders.py  guardian_ai_environment.py  scenarios.py
tests/: test_graders.py
